<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>layered_hardware_dynamixel</name>
  <version>0.0.0</version>
  <description>The layered_hardware_dynamixel package</description>
  <maintainer email="okada@rm.is.tohoku.ac.jp">Yoshito Okada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dynamixel_workbench_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>layered_hardware</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>

  <!-- <test_depend>ament_cmake_gtest</test_depend> -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>